--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
 <div class="footer" id="_footer_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
 <script src="./show.js"></script>
 <script src="./show-author.js"></script>
+  <!--Antonius-->
 </div>
 </body>
 </html>
